--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
       rel="stylesheet"
     />
-
-    <script type="module" src="./scripts.js"></script>
-    <script type="module" src="./data.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -108,14 +105,17 @@
     <main class="list">
       <!-- Book preview list -->
       <div class="list__items" data-list-items></div>
+      <!-- Web Component -->
+      <book-preview></book-preview>
       <div class="list__message" data-list-message>
         No results found. Your filters might be too narrow.
       </div>
       <!-- Show more Button -->
       <button class="list__button" data-list-button></button>
     </main>
-    <!-- Book preview modal -->
+    <!-- Overlay on modals -->
     <dialog class="overlay" data-list-active>
+      <!-- Preview overlay -->
       <div class="overlay__preview">
         <img class="overlay__blur" data-list-blur src="" /><img
           class="overlay__image"
@@ -123,6 +123,7 @@
           src=""
         />
       </div>
+      <!-- Theme modal overlay -->
       <div class="overlay__content">
         <h3 class="overlay__title" data-list-title></h3>
         <div class="overlay__data" data-list-subtitle></div>
@@ -131,14 +132,14 @@
           data-list-description
         ></p>
       </div>
-      <!-- Search modal drop down list of book title / author / genre -->
+      <!-- Preview overlay Close button -->
       <div class="overlay__row">
         <button class="overlay__button overlay__button_primary" data-list-close>
           Close
         </button>
       </div>
     </dialog>
-    <!-- Search Modal -->
+    <!-- Search Modal Overlay -->
     <dialog class="overlay" data-search-overlay>
       <div class="overlay__content">
         <form class="overlay__form" data-search-form id="search">
@@ -183,6 +184,8 @@
         </div>
       </div>
     </dialog>
+    <!-- Web Component -->
+    <theme-modal></theme-modal>
     <!-- Theme modal -->
     <dialog class="overlay" data-settings-overlay>
       <div class="overlay__content">
@@ -213,7 +216,10 @@
         </div>
       </div>
     </dialog>
-
+    <script type="module" src="./scripts.js" defer></script>
+    <script type="module" src="./data.js" defer></script>
+    <script type="module" src="components/bookPreview.js" defer></script>
+    <script type="module" src="components/themeModal.js" defer></script>
     <div class="backdrop"></div>
   </body>
 </html>
