web component add on HTML

--- a/index.html
+++ b/index.html
@@ -216,6 +216,11 @@
         </div>
       </div>
     </dialog>
+    <!-- Web Component -->
+    <book-preview></book-preview>
+    <theme-modal></theme-modal>
+    <div class="backdrop"></div>
+    <!-- JavaScript files-->
     <script type="module" src="./scripts.js" defer></script>
     <script type="module" src="./data.js" defer></script>
     <script type="module" src="components/bookPreview.js" defer></script>
