Fix the script to render properly

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <script type="module" src="./scripts.js"></script>
+    <script type="module" src="./data.js"></script>
+    <script type="module" src="components/bookPreview.js"></script>
+    <script type="module" src="components/theme-modal.js"></script>
+    <script type="module" src="components/themeModal.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -219,12 +224,6 @@
     <!-- Web Component -->
     <book-preview></book-preview>
     <theme-modal></theme-modal>
-    <div class="backdrop"></div>
-    <!-- JavaScript files-->
-    <script type="module" src="./scripts.js" defer></script>
-    <script type="module" src="./data.js" defer></script>
-    <script type="module" src="components/bookPreview.js" defer></script>
-    <script type="module" src="components/themeModal.js" defer></script>
     <div class="backdrop"></div>
   </body>
 </html>
