--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" src="./scripts.js"></script>
-    <script type="module" src="./data.js"></script>
-    <script type="module" src="components/bookPreview.js"></script>
-    <script type="module" src="components/theme-modal.js"></script>
-    <script type="module" src="components/themeModal.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -221,9 +216,10 @@
         </div>
       </div>
     </dialog>
-    <!-- Web Component -->
-    <book-preview></book-preview>
-    <theme-modal></theme-modal>
+    <script type="module" src="./original.js" defer></script>
+    <script type="module" src="./data.js" defer></script>
+    <script type="module" src="components/bookPreview.js" defer></script>
+    <script type="module" src="components/themeModal.js" defer></script>
     <div class="backdrop"></div>
   </body>
 </html>
