changing the script file

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         </div>
       </div>
     </dialog>
-    <script type="module" src="./original.js" defer></script>
+    <script type="module" src="./scripts.js" defer></script>
     <script type="module" src="./data.js" defer></script>
     <script type="module" src="components/bookPreview.js" defer></script>
     <script type="module" src="components/themeModal.js" defer></script>
