removing original file

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
     </dialog>
     <script type="module" src="./scripts.js" defer></script>
     <script type="module" src="./data.js" defer></script>
-    <script type="module" src="components/bookPreview.js" defer></script>
-    <script type="module" src="components/themeModal.js" defer></script>
+    <script type="module" src="./components/bookPreview.js" defer></script>
+    <script type="module" src="./components/themeModal.js" defer></script>
     <div class="backdrop"></div>
   </body>
 </html>
